[gd_scene load_steps=7 format=3 uid="uid://3qwe5nmnoejx"]

[ext_resource type="FontFile" uid="uid://be18v7te12m5p" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_0lmf7"]
[ext_resource type="Script" uid="uid://ddw4hrag0gwyw" path="res://scripts/ui/pause_menu.gd" id="1_6tw0m"]
[ext_resource type="Shader" uid="uid://bou50jpte2i2x" path="res://assets/shaders/blur.gdshader" id="3_8uki6"]
[ext_resource type="Theme" uid="uid://cdvnx1x2un6o8" path="res://assets/themes/btn_theme.tres" id="3_f6eus"]

[sub_resource type="Theme" id="Theme_f6eus"]
default_font = ExtResource("1_0lmf7")
default_font_size = 48

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0bnpd"]
shader = ExtResource("3_8uki6")
shader_parameter/amount = 2.0

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_f6eus")
script = ExtResource("1_6tw0m")

[node name="BlurEffect" type="ColorRect" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_0bnpd")
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -199.5
offset_right = 280.0
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_f6eus")
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
text = "Resume"
flat = true

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
text = "Restart"
flat = true

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 130)
layout_mode = 2
text = "Main Menu"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_btn_pressed"]
